--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body data-gr-c-s-loaded="true">
 <div class="cv-header">
-    <span>Software Engineer</span>
+    <span>Senior Software Engineer</span>
     <h2>Sasha Syrotenko</h2>
 </div>
 <div class="cv-content">
@@ -34,9 +34,9 @@
             <div class="cv-perk-value">
           <span>
             My official name is Oleksandr, but I prefer name Sasha.
-            <br>I am software engineer and public speaker currently working for Hazelcast.
-            <br>My majorly interest (and the strongest passion) are compilers and virtual machines.
-            <br>Usually, I am making difference.
+            <br>I am a software engineer and public speaker currently working for game startup under NDA.
+            <br>My main interest is the engineering of reliable, correct and performant software.
+            <br>Recommendations are available by request.
           </span>
             </div>
         </li>
@@ -47,11 +47,10 @@
             <div class="cv-perk-value">
           <span>
             <ul>
+              <li>Distributed databases, SQL engines.</li>
+              <li>Building of complex highload systems</li>
+              <li>AI agents introduction to existing teams to improve team performance</li>
               <li>Compilers and runtimes design and development.</li>
-              <li>Concurrency and formal memory models.</li>
-              <li>SQL engines, distributed databases.</li>
-              <li>Browser engines.</li>
-              <li>Complex data structures and algorithms.</li>
             </ul>
           </span>
             </div>
@@ -63,16 +62,98 @@
             <div class="cv-perk-value">
           <span>
             <ul>
-              <li>Java, C++, Scala, SQL, JavaScript Jedi. WebAssembly lover.</li>
-              <li>Open Source lover : Hazelcast, DataKernel, WebAssembly VMs</li>
-              <li>Mentorship and small team management.</li>
-              <li>Strong system and infrastructure programming capabilities and experience.</li>
-              <li>Knowledge & experience of database internals.</li>
-              <li>Good algorithmic problems solving skills.</li>
+                <li>Main programming languages: Rust, Java,  C++, JavaScript.</li>
+                <li>SQL engine design and development from scratch (Hazelcast).</li>
+                <li>Distributed stream processing engine design and development.</li>
+                <li>DevOps capabilities: full CI/CD setup; Docker, k8s, Terraform. AWS cloud.</li>
+                <li>Solid concurrency knowledge/experience in building high-load systems.</li>
+                <li>Best practice application in real projects with the best tools for code quality.</li>
             </ul>
           </span>
             </div>
         </li>
+        <li class="extra-margin">
+            <div class="cv-perk-name">
+                <span>experience.</span>
+            </div>
+            <div class="cv-perk-value working-places">
+          <span>
+            <b>GameDev startup, under NDA | Senior Software Engineer </b>
+            Kyiv, Ukraine / Remote | Dec 2024 - May 2025 (laid off).
+            <p>
+                - Rust, ScyllaDB, Dragonfly, Clickhouse, Docker, k8s, Gitlab.<br>
+                – Full project from scratch to 100k CCU, including DevOps.<br>
+                – Introduced AI agents into team development workflow, leading to enhanced developer
+                productivity.<br>
+            </p>
+          </span>
+          <span>
+            <b>Hazelcast | Senior Software Engineer </b>
+            Kyiv, Ukraine / Remote | Jan 2021 - Sep 2024.
+            <p>
+                - Distributed streaming processing engine developer in a diverse distributed team.<br>
+                – Maintainer of the Hazelcast SQL engine and the Jet stream processing engine.<br>
+                – Led the partitioned data processing initiative.<br>
+                – Designed and developed migration-tolerant index scan support in Hazelcast SQL eng.<br>
+                – Co-designed and developed stream-to-stream JOIN for SQL and streaming engines.<br>
+                – Co-designed and implemented streaming window aggregations.<br>
+                – Integrated multiple paid features in Hazelcast Jet<br>
+                – Integration and support of SQL engine fuzzy testing (SQLancer).<br>
+            </p>
+          </span>
+          <span>
+            <b>Cybervision | Software Engineer (Contractor) </b>
+            Kyiv, Ukraine / Remote | Jan 2020 - Dec 2020.
+            <p>
+                – Developed IoT agent with Linux, Windows and QNX OS support. <br>
+                – Provide core agent’s functionality : fast data loading and uploading, self-update process.<br>
+                – Support OPC UA and various SQL databases as data sources support. <br>
+                – Support custom 3rd parties forks stability and updates (Qt, OpenSSL, abseil) <br>
+                – Developed agent application self-updating for each supported platform. <br>
+                – Support integration and e2e tests using Kotlin, TestNG and test-containters. <br>
+             </p>
+          </span>
+                <span>
+            <b>DataKernel (now ActiveJ) | Software Engineer (Contractor) | Performance Geek</b>
+            Kyiv, Ukraine / Remote | July 2019 - Dec 2019.
+            <p>
+              We are doing efficient asynchronous Java framework for and scalable web, network and big data solutions. <br>
+              - Runtime class tweaking tool called <a href="https://specializer.activej.io/"> serializer</a>. <br>
+              - Made DataKernel's serializers <a href="http://datakernel.io/docs/blog/datakernel-v31-release.html"> the fastest in JVM world with my team</a>. <br>
+              - Enabled Jigsaw modules for DataKernel. <br>
+              - Made DataKernel's RPC and memcached RPC server one of the fastest in the world. <br>
+              - Provided benchmarks for every major component. <br>
+              - Participate in custom <a href="http://datakernel.io/docs/cloud/cube.html"> OLAP Cube</a> engine . <br>
+            </p>
+          </span>
+                <span>
+            <b>Aeneas | Blockchain Software Engineer</b>
+            Kyiv, Ukraine / Remote | January 2018 - May 2019.
+            <p>
+              Extraordinary blockchain platform as threshold pledge system.
+              <br>Creating of mining algorithms, transaction sending and network support for blockchain desktop application creation.
+              <br>Using Akka Actors, Akka Streams for blockchain desktop application creation.
+            </p>
+          </span>
+                <span>
+            <b>SAP SE | Software Engineer Intern</b>
+            Walldorf, Germany | June 2018 - September, 2018
+            <p>
+              Integrated Google Cloud Functions for SAP DataHub.
+            </p>
+          </span>
+                <span>
+            <b>Financial Group Aurora | Software Engineer Intern</b>
+            Kyiv, Ukraine | March 2016 - October 2016
+            <p>
+                Сustom trading platform and applications for exchange analysis development.
+                <br>Improved runtime performance of exchange analysis by ~15%,
+                    which gave us possibilities to open extra orders and gain more profit.
+            </p>
+          </span>
+            </div>
+        </li>
+        <li class="extra-margin">
         <li>
             <div class="cv-perk-name">
                 <span>profiles.</span>
@@ -96,6 +177,7 @@
           </span>
             </div>
         </li>
+        <li class="extra-margin">
         <li>
             <div class="cv-perk-name">
                 <span>education.</span>
@@ -110,77 +192,6 @@
         </li>
         <li class="extra-margin">
             <div class="cv-perk-name">
-                <span>experience.</span>
-            </div>
-            <div class="cv-perk-value working-places">
-          <span>
-            <b>Hazelcast | Senior Software Engineer </b>
-            Kyiv, Ukraine / Remote | Jan 2021 - present.
-            <p>
-                – Distributed SQL engine and streaming engine writer in distributed diverse team.. <br>
-                – Co-designed and developed stream to stream JOIN for SQL and streaming engine. <br>
-                – Designed and developed distributed streaming index scan for Hazelcast SQL engine. <br>
-                – Co-designed and implemented streaming window aggregation functions. <br>
-                – Designed and implemented different CREATE and DROP statements for SQL engine. <br>
-                – Designed and implemented DML layer for streaming part of SQL engine. <br>
-                – Developed wide list of SQL operators and functions according to SQL-2003 standard. <br>
-                – Integration and support of SQL engine fuzzy testing (SQLancer). <br>
-            </p>
-          </span>
-          <span>
-            <b>Cybervision | Software Engineer (Contractor) </b>
-            Kyiv, Ukraine / Remote | Jan 2020 - Dec 2020.
-            <p>
-                – Developed IoT agent with Linux, Windows and QNX OS support. <br>
-                – Provide core agent’s functionality : fast data loading and uploading, self-update process.<br>
-                – Support OPC UA and various SQL databases as data sources support. <br>
-                – Support custom 3rd parties forks stability and updates (Qt, OpenSSL, abseil) <br>
-                – Developed agent application self-updating for each supported platform. <br>
-                – Support integration and e2e tests using Kotlin, TestNG and test-containters. <br>
-             </p>
-          </span>
-          <span>
-            <b>DataKernel (now ActiveJ) | Software Engineer (Contractor) | Performance Geek</b>
-            Kyiv, Ukraine / Remote | July 2019 - Dec 2019.
-            <p>
-              We are doing efficient asynchronous Java framework for and scalable web, network and big data solutions. <br>
-              - Runtime class tweaking tool called <a href="https://specializer.activej.io/"> serializer</a>. <br>
-              - Made DataKernel's serializers <a href="http://datakernel.io/docs/blog/datakernel-v31-release.html"> the fastest in JVM world with my team</a>. <br>
-              - Enabled Jigsaw modules for DataKernel. <br>
-              - Made DataKernel's RPC and memcached RPC server one of the fastest in the world. <br>
-              - Provided benchmarks for every major component. <br>
-              - Participate in custom <a href="http://datakernel.io/docs/cloud/cube.html"> OLAP Cube</a> engine . <br>
-            </p>
-          </span>
-          <span>
-            <b>Aeneas | Blockchain Software Engineer</b>
-            Kyiv, Ukraine / Remote | January 2018 - July 2019.
-            <p>
-              Extraordinary blockchain platform as threshold pledge system.
-              <br>Creating of mining algorithms, transaction sending and network support for blockchain desktop application creation.
-              <br>Using Akka Actors, Akka Streams for blockchain desktop application creation.
-            </p>
-          </span>
-                    <span>
-            <b>SAP SE | Software Engineer Intern</b>
-            Walldorf, Germany | June 2018 - September, 2018
-            <p>
-              Integrated Google Cloud Functions for SAP DataHub.
-            </p>
-          </span>
-                    <span>
-            <b>Financial Group Aurora | Software Engineer Intern</b>
-            Kyiv, Ukraine | March 2016 - October 2016
-            <p>
-                Сustom trading platform and applications for exchange analysis development.
-                <br>Improved runtime performance of exchange analysis by ~15%,
-                    which gave us possibilities to open extra orders and gain more profit.
-            </p>
-          </span>
-                </div>
-        </li>
-        <li class="extra-margin">
-            <div class="cv-perk-name">
                 <span>talks.</span>
             </div>
             <div class="cv-perk-value working-places">
@@ -192,7 +203,7 @@
               </p>
             </span>
 
-            <span>
+                <span>
               <b>Multithreading in JS. Myth or reality?</b>
               KyivJS #18, Kyiv, Ukraine | April 2018.
               <p>
@@ -200,7 +211,7 @@
                 <br>Overview of synchronization primitives and memory models.
                 </p>
             </span>
-            <span>
+                <span>
               <b>Garbage collection in V8 virtual machine</b>
               KyivJS #16, Kyiv, Ukraine | November 2017.
               <p>
